--- a/apps/kyynk/src/lib/i18n/messages/en.json
+++ b/apps/kyynk/src/lib/i18n/messages/en.json
@@ -529,6 +529,27 @@
   "paymentModalSelectPackage": "Select a package to purchase credits.",
   "paymentModalPrice": "Price",
   "paymentModalCoins": "Coins",
+  "paymentErrorTitle": "Oops! Something went wrong",
+  "paymentErrorRetry": "Try Again",
+  "paymentFormIncomplete": "Payment form incomplete.",
+  "paymentFailed": "Payment failed.",
+  "paymentSuccess": "Payment succeeded! Your credits will be added shortly.",
+  "paymentPay": "Pay",
+  "paymentMostPopular": "MOST POPULAR",
+  "paymentBestValue": "BEST VALUE",
+  "paymentPerCredit": "per credit",
+  "paymentTotalCredits": "Total Credits",
+  "paymentBonus": "bonus",
+  "paymentSave": "Save",
+  "paymentValueProp1": "Perfect to get started",
+  "paymentValueProp2": "Great for regular users",
+  "paymentValueProp3": "Ideal for active members",
+  "paymentValueProp4": "Maximum value for power users",
+  "paymentValueProp5": "Ultimate experience package",
+  "paymentSocialProof": "⭐ Join over 10,000+ satisfied users • 💳 Secure payment • 🚀 Instant credit delivery",
+  "paymentGetCredits": "Get {credits} Credits",
+  "paymentSelectPackage": "Select a Package",
+  "paymentIntentFailed": "Failed to create payment intent",
   "revenueDashboardIncoming": "Incoming revenue",
   "revenueDashboardIncomingDesc": "The incoming revenue is from your sales that are currently being validated. It takes 7 days to validate, so this revenue will be available in 7 days.",
   "revenueDashboardAvailable": "Available revenue",
