--- a/apps/kyynk/src/lib/i18n/messages/fr.json
+++ b/apps/kyynk/src/lib/i18n/messages/fr.json
@@ -528,6 +528,27 @@
   "paymentModalSelectPackage": "Sélectionnez un pack pour acheter des crédits.",
   "paymentModalPrice": "Prix",
   "paymentModalCoins": "Crédits",
+  "paymentErrorTitle": "Oups ! Quelque chose s'est mal passé",
+  "paymentErrorRetry": "Réessayer",
+  "paymentFormIncomplete": "Formulaire de paiement incomplet.",
+  "paymentFailed": "Échec du paiement.",
+  "paymentSuccess": "Paiement réussi ! Vos crédits seront ajoutés sous peu.",
+  "paymentPay": "Payer",
+  "paymentMostPopular": "LE PLUS POPULAIRE",
+  "paymentBestValue": "MEILLEURE VALEUR",
+  "paymentPerCredit": "par crédit",
+  "paymentTotalCredits": "Crédits Totaux",
+  "paymentBonus": "bonus",
+  "paymentSave": "Économisez",
+  "paymentValueProp1": "Parfait pour commencer",
+  "paymentValueProp2": "Idéal pour les utilisateurs réguliers",
+  "paymentValueProp3": "Parfait pour les membres actifs",
+  "paymentValueProp4": "Valeur maximale pour les utilisateurs intensifs",
+  "paymentValueProp5": "Pack d'expérience ultime",
+  "paymentSocialProof": "⭐ Rejoignez plus de 10 000+ utilisateurs satisfaits • 💳 Paiement sécurisé • 🚀 Livraison instantanée de crédits",
+  "paymentGetCredits": "Obtenir {credits} Crédits",
+  "paymentSelectPackage": "Sélectionner un Pack",
+  "paymentIntentFailed": "Échec de la création de l'intention de paiement",
   "revenueDashboardIncoming": "Revenus en attente",
   "revenueDashboardIncomingDesc": "Les revenus en attente proviennent de vos ventes en cours de validation. Il faut 7 jours pour valider, ce revenu sera donc disponible dans 7 jours.",
   "revenueDashboardAvailable": "Revenus disponibles",
